--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -42,6 +42,7 @@ jobs:
       # This step remains the same.
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
+        platforms: linux/amd64,linux/arm64
         with:
           context: .
           push: true
