--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -38,7 +38,8 @@ jobs:
             # We are adding back the other two useful tags now that we've solved the main problem.
            # type=ref,event=branch
            # type=sha,format=short
-
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
       # This step remains the same.
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
