--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -28,10 +28,9 @@ jobs:
             type=ref,event=branch
             type=sha,format=short
             type=raw,value={{date 'YYYYMMDD-HHmmss'}}
-    # only needed if we enable platform below for additional arm image
-    #  - name: Set up Docker Buildx
-    #    id: buildx
-    #    uses: docker/setup-buildx-action@v2
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v2
 
       - name: Build and push Docker image
         id: build-and-push
