--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hcaptcha/react-hcaptcha": "^1.12.0",
+    "axios": "^1.10.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "lucide-react": "^0.344.0",
+    "openpgp": "^5.11.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "express": "^4.18.2",
-    "resend": "^3.1.0",
-    "openpgp": "^5.11.1",
-    "dotenv": "^16.3.1"
+    "resend": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
