--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
     "openpgp": "^5.11.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "resend": "^3.1.0"
+    "resend": "^3.1.0",
+    "@react-three/drei": "^9.88.7",
+    "@react-three/fiber": "^8.15.8",
+    "@react-three/postprocessing": "^2.15.1",
+    "@tweenjs/tween.js": "^21.0.0",
+    "three": "^0.158.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
@@ -35,6 +40,7 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "@types/three": "^0.158.2"
   }
 }
